add task solution

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,13 +11,13 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    color: #0f0e08;
+    color: $mainBlackColor;
     padding: 0;
-    border: 1px solid #1a5a4c;
+    border: 1px solid $greenColor;
 
     @include onMobile {
       height: 50px;
@@ -33,7 +33,7 @@
   &__press {
     box-sizing: border-box;
     position: relative;
-    background-color: #1a5a4c;
+    background-color: $greenColor;
 
     @include onMobile {
       height: 50px;
