--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   margin-top: 47px;
-  font-family: "IBM Plex Sans", sans-serif;
+  font-family: $fontIBMPlexSans;
 
   &__content {
     display: grid;
@@ -128,10 +128,10 @@
 
   &__link {
     text-decoration: none;
-    color: #0f0e08;
+    color: $mainBlackColor;
 
     &:hover {
-      color: #1a5a4c;
+      color: $greenColor;
       text-decoration: underline;
       font-weight: 600;
     }
@@ -140,27 +140,26 @@
   &__item {
     list-style: none;
     text-decoration: none;
-    font-family: "IBM Plex Sans", sans-serif;
-    font-style: normal;
+    font-family: $fontIBMPlexSans;
     font-weight: 400;
     font-size: 14px;
     line-height: 100%;
     margin-bottom: 20px;
-    color: #0f0e08;
+    color: $mainBlackColor;
   }
 
   &__contacts {
     text-decoration: none;
-    color: #0f0e08;
+    color: $mainBlackColor;
 
     &:hover {
-      color: #1a5a4c;
+      color: $greenColor;
       text-decoration: underline;
     }
   }
 
   &__copyright {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-weight: 300;
     font-size: 12px;
     line-height: 140.62%;
