--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,6 +1,6 @@
 .menu {
   box-sizing: border-box;
-  background-color: #1a5a4c;
+  background-color: $greenColor;
   overflow-x: hidden;
 
   &__top {
@@ -78,10 +78,10 @@
   }
 
   &__links {
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-weight: 500;
     line-height: 100%;
-    color: #fff;
+    color: $mainWhiteColor;
     text-decoration: none;
     transition: all 0.3s;
 
@@ -107,22 +107,20 @@
 
     @include onDesktop {
       height: 145px;
-      left: 652px;
-      top: 40px;
-      margin-left: 102px;
+      margin-left: 600px;
     }
   }
 
   &__schedule-title {
     margin: 24px 0 20px;
 
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
 
-    color: #fff;
+    color: $mainWhiteColor;
 
     @include onTablet {
       margin: 0 0 20px;
@@ -131,13 +129,13 @@
 
   &__schedule-time {
     margin: 0 0 16px;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
     line-height: 21px;
 
-    color: #fff;
+    color: $mainWhiteColor;
 
     @include onTablet {
       margin: 0;
@@ -151,7 +149,7 @@
 
   &__schedule-week {
     width: 280px;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
