--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import "../styles/utils/_mixins.scss";
+@import "../styles/utils/varaibles.scss";
 
 @import "../styles/blocks/icon.scss";
 @import "../styles/blocks/header.scss";
@@ -11,6 +12,10 @@
 @import "../styles/blocks/nav.scss";
 @import "../styles/blocks/footer.scss";
 @import "../styles/blocks/logo.scss";
+@import "../styles/blocks/subscribe.scss";
+@import "../styles/blocks/gallery.scss";
+@import "../styles/blocks/events.scss";
+@import "../styles/blocks/lecture.scss";
 
 * {
   padding: 0;
