--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -17,7 +17,6 @@
   }
 
   &__content {
-    height: 100vh;
 
     @include onMobile {
       margin-bottom: 70px;
@@ -29,16 +28,16 @@
 
     @include onDesktop {
       margin-bottom: 200px;
+      height: 100vh;
     }
   }
 
   &__logo {
-    font-family: "Montserrat", sans-serif;
-    font-style: normal;
+    font-family: $fontMontserrat;
     font-weight: 700;
     line-height: 100%;
     text-decoration: none;
-    color: #0f0e08;
+    color: $mainBlackColor;
 
     @include onMobile {
       margin-top: 9px;
@@ -76,7 +75,7 @@
     display: inline-block;
     width: 70px;
     height: 1px;
-    background: #1a5a4c;
+    background: $greenColor;
     margin-right: 20px;
   }
 
@@ -89,7 +88,7 @@
     color: #687480;
 
     &:hover {
-      color: #1a5a4c;
+      color: $greenColor;
       font-size: 18px;
     }
   }
@@ -120,8 +119,8 @@
 
   &__title {
     font-weight: 700;
-    font-family: "Montserrat", sans-serif;
-    color: #000;
+    font-family: $fontMontserrat;
+    color: $mainBlackColor;
 
     @include onMobile {
       margin-top: 251px;
@@ -150,8 +149,8 @@
     cursor: pointer;
     &:hover {
       box-sizing: border-box;
-      border: 1px ridge #080808;
-      background-color: #1a5a4c;
+      border: 1px ridge $mainBlackColor;
+      background-color: $greenColor;
     }
   }
 }
