--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -42,13 +42,13 @@
 
   &__link {
     text-decoration: none;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
 
-    color: #fff;
+    color: $mainWhiteColor;
     transition: all 0.3s;
 
     @include onDesktop {
