--- a/src/styles/blocks/work.scss
+++ b/src/styles/blocks/work.scss
@@ -10,13 +10,13 @@
 
   &__title {
     margin: 24px 0 20px;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
 
-    color: #fff;
+    color: $mainWhiteColor;
 
     @include onTablet {
       margin: 0 0 20px;
@@ -27,7 +27,7 @@
     }
 
     &--footer {
-      color: #0f0e08;
+      color: $mainBlackColor;
       font-size: 14px;
       line-height: 140.62%;
       margin-top: 0;
@@ -51,7 +51,7 @@
     }
 
     &--footer {
-      color: #0f0e08;
+      color: $mainBlackColor;
       flex-direction: column;
       font-size: 14px;
       line-height: 150%;
@@ -60,10 +60,10 @@
 
   &__schedule {
     margin: 0 0 16px;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-size: 14px;
     line-height: 21px;
-    color: #fff;
+    color: $mainWhiteColor;
 
     @include onTablet {
       margin: 0;
@@ -77,7 +77,7 @@
     &--footer {
       font-size: 14px;
       line-height: 21px;
-      color: black;
+      color: $mainBlackColor;
     }
 
     &--bottom {
@@ -88,11 +88,11 @@
 
   &__day-off {
     width: 280px;
-    font-family: "IBM Plex Sans", sans-serif;
+    font-family: $fontIBMPlexSans;
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
-    color: #fff;
+    color: $mainWhiteColor;
 
     @include onTablet {
       width: 150px;
