--- a/src/styles/blocks/work-shelude.scss
+++ b/src/styles/blocks/work-shelude.scss
@@ -14,11 +14,12 @@
   }
 
   &--footer {
-    padding-bottom: 0;
+    padding: 0;
     border-top: none;
 
     @include onTablet {
       padding: 0;
+      border-left: 0;
     }
 
     @include onDesktop {
