added events, lection, subscribe, title-block

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,3 +12,7 @@
 @import "./blocks/nav-block.scss";
 @import "./blocks/schedule-block.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/title-block.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lection.scss";
+@import "./blocks/subscribe.scss";
