subscribe-button fixed

--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -95,10 +95,16 @@
     }
   }
 
-  &__button {
+  &__button-container {
+    height: 100%;
+    width: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  &__button {
     border: none;
     box-sizing: border-box;
     padding: 0;
