all blocks added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,3 +16,5 @@
 @import "./blocks/events.scss";
 @import "./blocks/lection.scss";
 @import "./blocks/subscribe.scss";
+@import "./blocks/dots-block.scss";
+@import "./blocks/gallery.scss";
