--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -17,7 +17,7 @@
 
     &:focus {
       margin-right: 0;
-      border: solid 1px #a14a27;
+      outline: 3px solid #a14a27;
     }
 
     &::placeholder {
@@ -49,7 +49,7 @@
     transition: all 0.3s;
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.1) rotate(-90deg);
     }
 
     @include onTablet {
