added vars + extends

--- a/src/styles/blocks/arc.scss
+++ b/src/styles/blocks/arc.scss
@@ -1,16 +1,17 @@
 .arc {
   box-sizing: border-box;
   margin: 0 auto;
-  max-width: 1280px;
-  padding: 0 20px;
+  max-width: $desktop-width;
+  padding: $mobile-padding-page;
+  
   height: 100%;
   width: 100%;
 
   @include onTablet {
-    padding: 0 35px;
+    padding: $table-padding-page;
   }
 
   @include onDesktop {
-    padding: 0 55px;
+    padding: $desktop-padding-page;
   }
 }
