--- a/src/styles/blocks/dots-block.scss
+++ b/src/styles/blocks/dots-block.scss
@@ -19,17 +19,16 @@
   }
 
   &__dot {
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-color: #E0E0E0;
-    height: 9px;
-    width: 9px;
+    @extend %background-image-cover;
+
+    background-color: $dots-gallery-color;
+    height: $dots-gallery-size;
+    width: $dots-gallery-size;
     border-radius: 50%;
     margin-right: 16px;
 
     &--active {
-      background-color: #1A5A4C;
+      background-color: $green-color;
     }
   }
 }
