--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     position: relative;
 
-    background-color: #1A5A4C;
+    background-color: $green-color;
     height: $menu-height;
     width: 100%;
 
@@ -23,7 +23,7 @@
 
   &__grey-zone {
     height: calc(100vh - $menu-height);
-    background-color: rgba(41, 41, 41, 0.5);
+    background-color: $menu-grey-zone-color;
 
     @include onTablet {
       $menu-height: 225px;
@@ -39,12 +39,14 @@
   &__content {
     display: flex;
     flex-direction: column;
+
     padding-top: 25px;
 
     @include onTablet {
-      padding-top: 40px;
       flex-direction: row;
       justify-content: space-between;
+      
+      padding-top: 40px;
     }
   }
 
@@ -66,7 +68,7 @@
     height: 100%;
 
     @include onTablet {
-      border-right: 1px solid rgba(255, 255, 255, 0.5);
+      border-right: $menu-border;
     }
 
     @include onDesktop {
@@ -75,7 +77,7 @@
   }
 
   &__right-block {
-    border-top: 1px solid rgba(255, 255, 255, 0.5);
+    border-top: $menu-border;
     padding: 25px 0 0;
 
     @include onTablet {
@@ -84,7 +86,7 @@
     }
 
     @include onDesktop {
-      border-left: 1px solid rgba(255, 255, 255, 0.5);
+      border-left: $menu-border;
       padding: 0 0 0 100px;
     }
   }
