--- a/src/styles/blocks/nav-block.scss
+++ b/src/styles/blocks/nav-block.scss
@@ -1,5 +1,4 @@
 .nav-block {
-
   &--footer {
     margin-bottom: 80px;
 
@@ -37,7 +36,7 @@
     }
 
     &--footer {
-      color: #0F0E08;
+      color: $font-color__semi-black;
       flex-basis: 130px;
       flex-grow: 1;
       margin-right: 20px;
@@ -69,7 +68,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    color: #FFFFFF;
+    color: $white-color;
 
     @include onDesktop {
       font-size: 22px;
@@ -78,7 +77,7 @@
     &--footer {
       font-weight: 400;
       font-size: 14px;
-      color: #0F0E08;
+      color: $font-color__semi-black;
     }
   }
 }
