--- a/src/styles/blocks/schedule-block.scss
+++ b/src/styles/blocks/schedule-block.scss
@@ -2,10 +2,10 @@
   font-family: 'IBM Plex Sans';
   font-weight: 400;
   font-size: 14px;
-  color: #FFFFFF;
+  color: $white-color;
 
   &--footer {
-    color: #0F0E08;
+    color: $font-color__semi-black;
     flex-basis: 130px;
     flex-grow: 1;
     margin-right: 20px;
