--- a/src/styles/blocks/title-block.scss
+++ b/src/styles/blocks/title-block.scss
@@ -1,9 +1,7 @@
 .title-block {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 100%;
+  @extend %h2;
   text-align: center;
-  color: #0F0E08;
+  color: $font-color__semi-black;
 
   margin-bottom: 40px;
 
