--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,11 +1,11 @@
 @mixin onTablet {
-  @media (min-width: 768px) {
+  @media (min-width: $table-width) {
     @content;
   }
 }
 
 @mixin onDesktop {
-  @media (min-width: 1280px) {
+  @media (min-width: $desktop-width) {
     @content;
   }
 }
