--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,2 +1,58 @@
 $menu-height: 400px;
 $menu-height-grey-zone: calc(100vh - $menu-height);
+
+$table-width: 768px;
+$desktop-width: 1280px;
+
+$mobile-padding-page: 0 20px;
+$table-padding-page: 0 35px;
+$desktop-padding-page: 0 55px;
+
+$font-color__total-black: #000000;
+$font-color__semi-black: #0f0e08;
+$font-color__dark-grey: #4e4e4e;
+$font-color__light-grey: #687480;
+
+$green-color: #1a5a4c;
+$dots-gallery-color: #e0e0e0;
+$dark-green-color: rgba(26, 90, 76, 0.5);
+$white-color: #fff;
+$menu-grey-zone-color: rgba(41, 41, 41, 0.5);
+
+$orange-rectangle-size-mobile: 10px;
+$orange-rectangle-size-tablet: 15px;
+$dots-gallery-size: 9px;
+$icon-menu-width: 18px;
+$icon-menu-hight: 12px;
+$icon-social-media-size: 24px;
+$icon-up-arrow-size: 50px;
+$logo-font-size-small: 30px;
+$logo-font-size-big: 36px;
+$title-block-font-size: 36px;
+
+$subscribe-form-length-mobile: 230px;
+$subscribe-form-length-tablet: 370px;
+$subscribe-form-length-desktop: 470px;
+$subscribe-form-size-mobile: 50px;
+$subscribe-form-size-tablet: 70px;
+$subscribe-form-size-arrow: 12px;
+
+$menu-border: 1px solid rgba(255, 255, 255, 0.5);
+
+$header-height-mobile: 300px;
+$header-height-tablet: 384px;
+$header-height-desktop: 655px;
+
+$gallery-photo-height-mobile: 410px;
+$gallery-photo-width-mobile: 280px;
+$gallery-photo-height-tablet: 540px;
+$gallery-photo-width-tablet: 340px;
+
+$gallery-photo-row-1-height-desktop: 600px;
+$gallery-photo-row-2-height-desktop: 360px;
+$gallery-photo-height-desktop: 100%;
+$gallery-photo-width-desktop: 100%;
+
+$events-photo-hight-mobile: 210px;
+$events-photo-hight-tablet: 520px;
+$events-photo-hight-desktop: 670px;
