--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -14,17 +14,17 @@
     overflow: hidden;
     box-sizing: border-box;
     width: 100%;
-    max-height: 210px;
+    max-height: $events-photo-hight-mobile;
     margin-bottom: 15px;
     transition: transform 0.3s, border-radius 0.3s;
 
     @include onTablet {
-      max-height: 520px;
+      max-height: $events-photo-hight-tablet;
       margin-bottom: 40px;
     }
 
     @include onDesktop {
-      max-height: 670px;
+      max-height: $events-photo-hight-desktop;
       margin-bottom: 0;
     }
   }
@@ -49,22 +49,24 @@
   &__date-block {
     display: flex;
     justify-content: space-between;
-    height: 100%;
-    margin-bottom: 10px;
-    font-family: 'IBM Plex Sans';
-    font-size: 16px;
     align-items: center;
 
+    height: 100%;
+    margin-bottom: 10px;
+
+    font-family: 'IBM Plex Sans';
+    font-size: 16px;
+
     @include onTablet {
-      font-size: 14px;
-      margin-bottom: 30px;
       justify-content: start;
+      margin-bottom: 30px;
+      font-size: 14px;
     }
   }
 
   &__name {
     font-weight: 500;
-    color: #687480;
+    color: $font-color__light-grey;
 
     @include onTablet {
       margin-right: 30px;
@@ -73,7 +75,7 @@
 
   &__date {
     font-weight: 700;
-    color: #1a5a4c;
+    color: $green-color;
   }
 
   &__details-block {
@@ -84,8 +86,7 @@
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 28px;
-    line-height: 100%;
-    color: #0f0e08;
+    color: $font-color__semi-black;
 
     @include onTablet {
       font-size: 36px;
@@ -97,21 +98,20 @@
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
-    color: #4e4e4e;
+    color: $font-color__dark-grey;
   }
 
   &__orange-rectangle {
+    @extend %background-image-cover;
     background-image: url(/src/images/orange-rectangle.svg);
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-    height: 10px;
-    width: 10px;
+
+    height: $orange-rectangle-size-mobile;
+    width: $orange-rectangle-size-mobile;
     margin: 12px 0 0 12px;
 
     @include onTablet {
-      height: 15px;
-      width: 15px;
+      height: $orange-rectangle-size-tablet;
+      width: $orange-rectangle-size-tablet;
     }
   }
 
