--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -40,7 +40,7 @@
     box-sizing: content-box;
 
     margin-bottom: 40px;
-    border-bottom: 1px solid rgba(26, 90, 76, 0.5);
+    border-bottom: 1px solid $dark-green-color;
 
     @include onDesktop {
       margin-bottom: 70px;
@@ -60,7 +60,7 @@
       display: block;
       height: 260px;
       width: 1px;
-      background-color: rgba(26, 90, 76, 0.5);
+      background-color: $dark-green-color;
       margin: 0 auto;
     }
   }
@@ -69,7 +69,7 @@
     font-family: 'IBM Plex Sans';
     font-weight: 300;
     font-size: 12px;
-    color: #0F0E08;
+    color: $font-color__semi-black;
 
     display: flex;
     flex-direction: column;
