--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,14 +1,14 @@
 .gallery {
-  box-sizing: border-box;
   display: flex;
   flex-direction: row;
+
+  box-sizing: border-box;
   overflow: hidden;
+
   width: 100%;
   margin-bottom: 20px;
 
-
   @include onTablet {
-    flex-direction: row;
     margin-bottom: 32px;
   }
 
@@ -18,45 +18,49 @@
   }
 
   &__photo-row {
-    width: 100%;
     display: flex;
-    height: 410px;
+
+    width: 100%;
+    height: $gallery-photo-height-mobile;
 
     @include onTablet {
-      height: 543px;
+      height: $gallery-photo-height-tablet;
     }
 
     @include onDesktop {
-      height: 600px;
-      margin-bottom: 30px;
-
       display: grid;
       grid-template-columns: repeat(12, 1fr);
       column-gap: 30px;
+
+      height: $gallery-photo-row-1-height-desktop;
+      margin-bottom: 30px;
     }
 
     &--second {
-      height: 360px;
+      @include onDesktop {
+        height: $gallery-photo-row-2-height-desktop;
+      }
     }
   }
 
   &__photo-container {
-    background-size: cover;
-    background-position: top center;
-    background-repeat: no-repeat;
-    height: 410px;
-    width: 280px;
+    @extend %background-image-cover;
+
+    height: $gallery-photo-height-mobile;
+    width: $gallery-photo-width-mobile;
+
     margin-right: 16px;
 
     @include onTablet {
-      height: 543px;
-      width: 340px;
+      height: $gallery-photo-height-tablet;
+      width: $gallery-photo-width-tablet;
+
       margin-right: 20px;
     }
 
     @include onDesktop {
-      height: 100%;
-      width: 100%;
+      height: $gallery-photo-height-desktop;
+      width: $gallery-photo-width-desktop;
     }
   }
 
