--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,10 +1,8 @@
 .icon {
-  background-size: contain;
-  background-position: top center;
-  background-repeat: no-repeat;
+  @extend %background-image-contain;
 
-  width: 18px;
-  height: 12px;
+  width: $icon-menu-width;
+  height: $icon-menu-hight;
 
   &--menu-opener {
     background-image: url(/src/images/menu-opener.svg);
@@ -16,20 +14,20 @@
 
   &--facebook {
     background-image: url(/src/images/Facebook.svg);
-    width: 24px;
-    height: 24px;
+    width: $icon-social-media-size;
+    height: $icon-social-media-size;
     margin-right: 25px;
   }
 
   &--instagram {
     background-image: url(/src/images/instagram-3.svg);
-    width: 24px;
-    height: 24px;
+    width: $icon-social-media-size;
+    height: $icon-social-media-size;
   }
 
   &--up-arrow {
     background-image: url(/src/images/Arrow-up.svg);
-    width: 50px;
-    height: 50px;
+    width: $icon-up-arrow-size;
+    height: $icon-up-arrow-size;
   }
 }
