--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -4,7 +4,7 @@
   text-transform: uppercase;
 
   font-weight: 700;
-  font-size: 30px;
+  font-size: $logo-font-size-small;
   line-height: 100%;
   color: #0F0E08;
 
@@ -18,7 +18,7 @@
 
   &--footer {
     text-align: left;
-    font-size: 36px;
+    font-size: $logo-font-size-big;
 
     @include onTablet {
       margin-bottom: 62px;
