--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 
-  background: #fff;
+  background: $white-color;
   scroll-behavior: smooth;
   font-family: Montserrat, Roboto, sans-serif;
 
