--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,34 @@
+%background-image-cover {
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+
+%background-image-contain {
+  background-size: contain;
+  background-position: top center;
+  background-repeat: no-repeat;
+}
+
+%flex-row-center-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  margin: 0;
+  padding: 0;
+  font-family: Montserrat, Roboto, sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  text-transform: uppercase;
+}
+
+%h2 {
+  margin: 0;
+  padding: 0;
+  font-family: Montserrat, Roboto, sans-serif;
+  font-weight: 700;
+  font-size: $title-block-font-size;
 }
