--- a/src/styles/blocks/dots-block.scss
+++ b/src/styles/blocks/dots-block.scss
@@ -27,6 +27,10 @@
     border-radius: 50%;
     margin-right: 16px;
 
+    &:hover {
+      transform: scale(1.2);
+    }
+
     &--active {
       background-color: $green-color;
     }
