--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -66,10 +66,18 @@
 
   &--photo-1 {
     background-image: url(/src/images/photo1_for-all.jpg);
+
+    &:hover {
+      transform: scale(1.01);
+    }
   }
 
   &--photo-2 {
     background-image: url(/src/images/photo2_for-tabl.jpg);
+
+    &:hover {
+      transform: scale(1.01);
+    }
 
     @include onDesktop {
       background-image: url(/src/images/photo2_for-desk.jpg);
@@ -78,6 +86,10 @@
 
   &--photo-3 {
     background-image: url(/src/images/photo3_for-desk.jpg);
+
+    &:hover {
+      transform: scale(1.01);
+    }
 
     @include onTablet {
       background-position: top 0px right -200px;
@@ -90,5 +102,9 @@
 
   &--photo-4 {
     background-image: url(/src/images/photo4_for-all.jpg);
+
+    &:hover {
+      transform: scale(1.01);
+    }
   }
 }
