--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,13 +1,13 @@
 .events {
   margin-bottom: 60px;
 
-    @include onTablet {
-      margin-bottom: 64px;
-    }
+  @include onTablet {
+    margin-bottom: 64px;
+  }
 
-    @include onDesktop {
-      margin-bottom: 104px;
-    }
+  @include onDesktop {
+    margin-bottom: 104px;
+  }
 
   &__photo-container {
     position: relative;
@@ -54,7 +54,7 @@
     height: 100%;
     margin-bottom: 10px;
 
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, Roboto, sans-serif;
     font-size: 16px;
 
     @include onTablet {
@@ -83,7 +83,7 @@
   }
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: Montserrat, Roboto, sans-serif;
     font-weight: 400;
     font-size: 28px;
     color: $font-color__semi-black;
@@ -94,7 +94,7 @@
   }
 
   &__description {
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, Roboto, sans-serif;
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
