--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -66,7 +66,7 @@
   }
 
   &__authors {
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, Roboto, sans-serif;
     font-weight: 300;
     font-size: 12px;
     color: $font-color__semi-black;
