--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -92,7 +92,7 @@
     }
 
     @include onTablet {
-      background-position: top 0px right -200px;
+      background-position: top 0 right -200px;
     }
 
     @include onDesktop {
