--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -75,10 +75,10 @@
     &::after {
       margin-top: 130px;
       position: absolute;
-      content: 'події';
+      content: "події";
       display: block;
 
-      font-family: 'IBM Plex Sans';
+      font-family: IBM Plex Sans, Roboto, sans-serif;
       font-weight: 700;
       font-size: 14px;
       color: $font-color__light-grey;
@@ -119,7 +119,7 @@
 
     text-align: center;
     text-transform: uppercase;
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, Roboto, sans-serif;
     font-weight: 500;
     font-size: 16px;
     color: $font-color__semi-black;
