--- a/src/styles/blocks/lection.scss
+++ b/src/styles/blocks/lection.scss
@@ -29,7 +29,6 @@
     height: 210px;
     width: 100%;
 
-
     @include onTablet {
       height: 390px;
     }
@@ -53,7 +52,7 @@
     width: 280px;
 
     background-color: $white-color;
-    box-shadow: 0px 2px 0px $dark-green-color;
+    box-shadow: 0 2px 0 $dark-green-color;
 
     text-decoration: none;
 
@@ -83,7 +82,7 @@
     display: flex;
     justify-content: space-between;
 
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, Roboto, sans-serif;
     font-size: 16px;
     margin-bottom: 20px;
     padding: 0 20px;
@@ -106,7 +105,7 @@
   }
 
   &__title {
-    font-family: 'Montserrat';
+    font-family: Montserrat, Roboto, sans-serif;
     font-weight: 400;
     font-size: 28px;
     color: $font-color__semi-black;
