--- a/src/styles/blocks/nav-block.scss
+++ b/src/styles/blocks/nav-block.scss
@@ -7,7 +7,7 @@
     }
 
     @include onDesktop {
-      margin-bottom: 0px;
+      margin-bottom: 0;
     }
   }
 
@@ -64,7 +64,7 @@
   &__link {
     width: 100%;
     text-decoration: none;
-    font-family: 'IBM Plex Sans';
+    font-family: IBM Plex Sans, Roboto, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
