--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -6,7 +6,7 @@
   font-weight: 700;
   font-size: $logo-font-size-small;
   line-height: 100%;
-  color: #0F0E08;
+  color: $font-color__semi-black;
 
   &--header {
     text-align: center;
@@ -25,4 +25,3 @@
     }
   }
 }
-
