--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -3,54 +3,62 @@
   height: 100vh;
 
   &__top-nav {
+    display: flex;
+    flex-direction: column;
     margin: 0;
+
+    @include onTablet {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+    }
+
+    @include onDesktop {
+      grid-template-columns: repeat(12, 1fr);
+    }
 
     &__museum {
       position: absolute;
       background-image: url(../images/photos/actual-acts/Muzej.svg);
       width: 100%;
       height: 350px;
-      right: 0;
-      top: 0;
       background-repeat: no-repeat;
       background-position: center;
       background-size: cover;
-      transform: translateY(-9px);
       z-index: 0;
 
       @include onTablet {
-        width: 42%;
         height: 100%;
+        grid-area: 4 / 6;
         margin-bottom: 88px;
       }
 
       @include onDesktop {
-        width: 58%;
         height: 100%;
       }
     }
 
     &__container {
       display: flex;
+      flex-direction: row;
       justify-content: flex-start;
       margin: 0 23px;
       line-height: 61px;
 
       @include onTablet {
         display: grid;
+        grid-template-columns: repeat(6, 1fr);
         margin: 0 0 40px;
         line-height: 72px;
       }
 
       @include onDesktop {
+        grid-template-columns: repeat(12, 1fr);
         margin: 0;
-        display: grid;
         line-height: 72px;
       }
     }
 
     &__link {
-      margin: 9px 27% 0 0;
       z-index: 1;
 
       @include onTablet {
@@ -73,8 +81,11 @@
       z-index: 1;
 
       @include onTablet {
+        display: grid;
         margin-bottom: 0;
         margin-top: 15px;
+        // justify-content: center;
+        // align-items: center;
       }
 
       @include onDesktop {
@@ -113,6 +124,7 @@
         margin-top: 20px;
 
         @include onTablet {
+          justify-content: start;
           margin-top: 0;
         }
 
@@ -125,6 +137,7 @@
         margin-bottom: 20px;
 
         @include onTablet {
+          justify-content: start;
           margin-bottom: 40px;
         }
 
