--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -27,6 +27,7 @@
       z-index: 0;
 
       @include onTablet {
+        position: relative;
         height: 100%;
         grid-area: 4 / 6;
         margin-bottom: 88px;
