--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -7,14 +7,14 @@
     flex-direction: column;
     margin: 0;
 
-    @include onTablet {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-    }
+    // @include onTablet {
+    //   display: grid;
+    //   grid-template-columns: repeat(6, 1fr);
+    // }
 
-    @include onDesktop {
-      grid-template-columns: repeat(12, 1fr);
-    }
+    // @include onDesktop {
+    //   grid-template-columns: repeat(12, 1fr);
+    // }
 
     &__museum {
       position: absolute;
@@ -29,7 +29,7 @@
       @include onTablet {
         position: relative;
         height: 100%;
-        grid-area: 4 / 6;
+        // grid-area: 4 / 6;
         margin-bottom: 88px;
       }
 
@@ -46,14 +46,14 @@
       line-height: 61px;
 
       @include onTablet {
-        display: grid;
-        grid-template-columns: repeat(6, 1fr);
+        // display: grid;
+        // grid-template-columns: repeat(6, 1fr);
         margin: 0 0 40px;
         line-height: 72px;
       }
 
       @include onDesktop {
-        grid-template-columns: repeat(12, 1fr);
+        // grid-template-columns: repeat(12, 1fr);
         margin: 0;
         line-height: 72px;
       }
@@ -74,6 +74,7 @@
     }
 
     &__menu-image {
+      margin-right: 160px;
       cursor: pointer;
     }
 
@@ -82,7 +83,7 @@
       z-index: 1;
 
       @include onTablet {
-        display: grid;
+        // display: grid;
         margin-bottom: 0;
         margin-top: 15px;
         // justify-content: center;
@@ -95,6 +96,7 @@
 
       &__NAMU {
         height: 61px;
+
         @include onTablet {
           height: 72px;
         }
@@ -113,12 +115,12 @@
 
       @include onTablet {
         margin: 0 0 0 35px;
-        display: grid;
+        // display: grid;
       }
 
       @include onDesktop {
         margin: 0 0 0 45px;
-        display: grid;
+        // display: grid;
       }
 
       &--h {
