--- a/src/styles/utils/_header_top.scss
+++ b/src/styles/utils/_header_top.scss
@@ -3,8 +3,8 @@
   height: 100vh;
 
   &__top-nav {
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
     margin: 0;
 
     // @include onTablet {
@@ -63,7 +63,7 @@
       z-index: 1;
 
       @include onTablet {
-        margin: 15px 0 0 35px;
+        margin: 15px 160px 0 35px;
         width: min-content;
         height: min-content;
       }
@@ -74,18 +74,16 @@
     }
 
     &__menu-image {
-      margin-right: 160px;
       cursor: pointer;
     }
 
     &__logo {
-      margin: 9px 0 250px;
+      margin: 9px 32% 250px;
       z-index: 1;
 
       @include onTablet {
         // display: grid;
-        margin-bottom: 0;
-        margin-top: 15px;
+        margin: 15px auto 0;
         // justify-content: center;
         // align-items: center;
       }
