--- a/src/styles/utils/_gallery.scss
+++ b/src/styles/utils/_gallery.scss
@@ -1,4 +1,5 @@
 .gallery {
+  overflow: hidden;
   margin: 0 20px 100px;
 
   @include onTablet {
@@ -27,144 +28,75 @@
     }
   }
 
-  &__slideshow-container {
+  &__slideshow {
     position: relative;
-
-    margin: auto;
-
-    @include onTablet {
-      display: flex;
-      margin-bottom: 38px;
-    }
+    display: flex;
+    justify-content: center;
 
     @include onDesktop {
       display: grid;
     }
-
-    &__mySlides {
-      overflow: hidden;
-      // display: none;
-
-      // &--desktop {
-      //   @include onDesktop {
-      //     margin-bottom: 30px;
-      //   }
-      // }
-
-      &--1 {
-        background-image: url(../images/photos/gallery/1.svg);
-        background-size: cover;
-        width: 100%;
-        height: 530px;
-
-        @include onTablet {
-          height: 543px;
-        }
-
-        @include onDesktop {
-          height: 600px;
-          margin-bottom: 30px;
-
-          transition: transform 300ms;
-
-          &:hover {
-            transform: scale(1.1);
-          }
-        }
-      }
-
-      &--2 {
-        @include onDesktop {
-          margin-bottom: 30px;
-          background-image: url(../images/photos/gallery/2.svg);
-          background-size: cover;
-          width: 100%;
-          height: 600px;
-
-          transition: transform 300ms;
-
-          &:hover {
-            transform: scale(1.1);
-          }
-        }
-      }
-
-      &--3 {
-        @include onDesktop {
-          background-image: url(../images/photos/gallery/3.svg);
-          background-size: cover;
-          width: 100%;
-          height: 600px;
-
-          transition: transform 300ms;
-
-          &:hover {
-            transform: scale(1.1);
-          }
-        }
-      }
-
-      &--4 {
-        @include onDesktop {
-          background-image: url(../images/photos/gallery/4.svg);
-          background-size: cover;
-          width: 100%;
-          height: 600px;
-
-          transition: transform 300ms;
-
-          &:hover {
-            transform: scale(1.1);
-          }
-        }
-      }
-
-      &--5 {
-        @include onTablet {
-          background-image: url(../images/photos/gallery/5.svg);
-          background-size: cover;
-          width: 100%;
-          height: 543px;
-          // transform: translateY(-100%);
-        }
-
-        @include onDesktop {
-          display: none;
-        }
-      }
-    }
-
-    // &__photo {
-    //   height: 460px;
-    //   width: 100%;
-
-    //   @include onTablet {
-    //     // width: auto;
-    //     height: 543px;
-    //     // object-fit: contain;
-    //     // object-position: center;
-    //   }
-
-    //   @include onDesktop {
-    //     background-size: cover;
-    //     width: 100%;
-    //     height: 600px;
-    //   }
-    // }
   }
 
-  // &__fade {
-  //   animation-name: fade;
-  //   animation-duration: 1.5s;
-  // }
+  &__wrapper {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  // @keyframes fade {
-  //   from {opacity: .4}
-  //   to {opacity: 1}
-  // }
+    @include onDesktop {
+      overflow: hidden;
+    }
+  }
+
+  &__mySlides {
+    display: none;
+
+    @include onDesktop {
+      display: block;
+    }
+  }
+
+  &__photo {
+    width: 100%;
+    margin-bottom: 20px;
+
+    @include onTablet {
+      width: auto;
+      margin-bottom: 32px;
+      object-fit: contain;
+      object-position: center;
+    }
+
+    @include onDesktop {
+      background-size: cover;
+      width: 100%;
+      height: 600px;
+      transition: transform 300ms;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
+  }
+
+  &__fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+
+  @keyframes fade {
+
+    from {
+      opacity: 1.4;
+    }
+
+    to {
+      opacity: 1;
+    }
+  }
 
   &__items {
-    margin-top: 20px;
     text-align: center;
 
     @include onTablet {
@@ -183,34 +115,20 @@
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
+
+    &--tablet {
+      @include onTablet {
+        display: none;
+      }
+    }
+
+    @include onDesktop {
+      display: none;
+    }
   }
 
   &__dot:active,
   &__dot:hover {
     background-color: $colorGreen;
-  }
-}
-
-.phone {
-  display: none;
-
-  @include onTablet {
-    display: block;
-  }
-}
-
-.tablet {
-  @include onTablet {
-    display: none;
-  }
-
-  @include onDesktop {
-    display: block;
-  }
-}
-
-.desktop {
-  @include onDesktop {
-    display: none;
   }
 }
