add task solution

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -109,7 +109,7 @@
   &__image {
     &:hover {
       transform: scale(1.1);
-      transition: transform 0.3s;
+      transition: transform 0.3s ease-in-out;
     }
     @include onMobile {
       width: 280px;
