--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -10,19 +10,21 @@
 
   &__first {
     padding-bottom: 30px;
+    width: 100%;
 
     @include onMobile {
       width: 280px;
     }
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
       transition: transform 0.3s;
     }
   }
 
   &__second {
     padding-bottom: 200px;
+    width: 100%;
 
     @include onMobile {
       width: 280px;
@@ -30,7 +32,7 @@
     }
 
     &:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
       transition: transform 0.3s;
     }
   }
