--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "./utils/variabels";
+@import "./utils/mixins.scss";
+@import "./utils/grid";
+@import "./utils/normalize";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/page.scss";
+@import "./blocks/main-title.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/footer.scss";
+@import "./blocks/subscribe.scss";
