fixed smooth scroll/ and header margin

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,14 @@
 .header {
   position: relative;
 
+  @include onTablet {
+    height: 384px;
+  }
+
+  @include onDesktop {
+    height: 655px;
+  }
+
   &__background {
     box-sizing: border-box;
     width: 100%;
