--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,17 +1,10 @@
 .page {
   font-family: "IBM Plex Sans";
-  font-weight: 300;
-  font-size: 16px;
-  line-height: 150%;
 
   scroll-behavior: smooth;
 
   &__body {
     box-sizing: border-box;
-
-    // &--with-menu {
-    //   overflow: hidden;
-    // }
   }
 
   &__menu {
@@ -30,12 +23,16 @@
   &__section {
     margin-bottom: 88px;
 
-    @include onDesktop {
-      margin-bottom: 200px;
-    }
-
     &--header {
-      margin-bottom: 104px;
+      margin-bottom: 70px;
+
+      @include onTablet {
+        margin-bottom: 88px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 200px;
+      }
     }
 
     &--events {
@@ -43,7 +40,15 @@
     }
 
     &--lection {
-      margin-bottom: 380px;
+      margin-bottom: 200px;
+
+      @include onTablet {
+        margin-bottom: 280px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 300px;
+      }
     }
   }
 }
