fixed logo link/fixed scroll-y behavior

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -20,7 +20,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-image: url("../images/photos/museum-photo.png");
-    z-index: -1;
+    // z-index: 1;
 
     @include onTablet {
       width: 50%;
@@ -39,6 +39,7 @@
     position: absolute;
     top: 20px;
     left: 45%;
+    cursor: pointer;
 
     @include onTablet {
       left: 40px;
