--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,5 +1,4 @@
 .gallery {
-
   &__title {
     font-family: "Montserrat";
     font-weight: 700;
@@ -36,6 +35,7 @@
       gap: 30px;
       width: 100%;
       margin-bottom: 0;
+      overflow-y: visible;
     }
   }
 
