add task solution

--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -61,9 +61,10 @@
 
   &__up {
     @include onMobile {
-      margin-left: 220px;
-      bottom: 120px;
-      position: relative;
+      right: 20px;
+      margin-top: 147px;
+      margin-bottom: 20px;
+      position: absolute;
       cursor: pointer;
       display: flex;
       align-items: center;
