--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -9,7 +9,7 @@
   }
 
   &__first {
-    padding-bottom: 30px;
+    margin-bottom: 30px;
     width: 100%;
 
     @include onMobile {
@@ -23,12 +23,19 @@
   }
 
   &__second {
-    padding-bottom: 200px;
+
     width: 100%;
+    @include onDesktop {
+      margin-bottom: 200px;
+    }
 
     @include onMobile {
       width: 280px;
-      padding-bottom: 30px;
+      margin-bottom: 30px;
+    }
+
+    @include onTablet {
+      margin-bottom: 133px;
     }
 
     &:hover {
@@ -54,5 +61,9 @@
     @include onTablet {
       font-size: 34px;
     }
+  }
+
+  &__last {
+    margin-bottom: 0;
   }
 }
