--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -70,8 +70,10 @@
 
   &__work {
     padding-left: 0;
+
     @include onMobile {
       grid-column: 1/1;
+      margin-bottom: 0;
 
     }
     @include onTablet {
@@ -105,6 +107,11 @@
   }
 
   &__list-left {
+    @include onMobile {
+      margin: 0;
+      padding: 0;
+    }
+
     @include onTablet {
       grid-column: 2/3;
       justify-content: center;
@@ -187,25 +194,23 @@
   }
 
   &__line {
+    position: relative;
     height: 1px;
-    width: 100%;
     background-color: rgba(26, 90, 76, 0.5);
 
     @include onMobile {
-      margin-top: 70px;
-      margin-bottom: 40px;
       grid-column: 1 / -1;
-      transform: rotate(0);
+      margin-top: 50px;
+      margin-bottom: 20px;
     }
 
     @include onTablet {
       grid-column: 2 / 6;
       transform: rotate(0);
-      margin: 64px 0;
+      margin: 34px 0;
     }
 
     @include onDesktop {
-      position: relative;
       height: 260px;
       width: 1px;
       grid-column: 7 / 8;
