--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -9,7 +9,9 @@
   }
 
   &__title {
+    position: relative;
     display: block;
+    z-index: 50;
     margin-bottom: 20px;
     font-family: "Montserrat", sans-serif;
     font-style: normal;
