--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,13 +1,20 @@
 .menu {
-  padding: 27px 0 20px;
   font-family: "IBM Plex Sans", sans-serif;
-  background-color: #1a5a4c;
   color: #fff;
   z-index: 100;
 
-  @include onTablet {
-    flex-direction: row;
-    padding: 39px 0 40px;
+  &:target {
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+
+  &__content {
+    padding: 27px 0 20px;
+    background-color: #1a5a4c;
+
+    @include onTablet {
+      flex-direction: row;
+      padding: 39px 0 40px;
+    }
   }
 
   &__wrap-content-parent {
