--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -12,12 +12,12 @@
     top: 0;
     left: 0;
     right: 0;
-    transform: translateX(-100%);
+    bottom: 0;
+    transform: translateY(-100%);
     transition: all 0.3s;
 
     &:target {
-      transform: translateX(0);
-      box-shadow: 0 0 0 99999px rgba(0, 0, 0, 0.5);
+      transform: translateY(0);
     }
   }
 }
