--- a/src/styles/utils/_footer.scss
+++ b/src/styles/utils/_footer.scss
@@ -277,7 +277,7 @@
 
   &__item {
     margin-bottom: 20px;
-    min-width: max-content;
+    // min-width: max-content;
     list-style-type: none;
 
     @include onTablet {
