--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,11 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
+%h1-h2 {
+  margin: 0;
+  font-family: $montserrat;
+  font-weight: 700;
+}
+
+%h3 {
+  margin: 0;
+  font-family: $montserrat;
   font-weight: 400;
 }
