--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
 @import "utils";
-@import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/button.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/actualy.scss";
+@import "./blocks/galery.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
