--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -31,6 +31,7 @@
     background-image: url(../images/arrow-white.svg);
     background-repeat: no-repeat;
     background-position: center center;
+    transition: width 0.3s;
 
     @include onTabletAndDesktop {
       width: 70px;
