--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -11,4 +11,16 @@
       overflow: hidden;
     }
   }
+
+  &__header {
+    margin: 0 auto 70px;
+
+    @include onTablet {
+      margin: 0 auto 88px;
+    }
+
+    @include onDesktop {
+      margin: 0 auto 200px;
+    }
+  }
 }
