--- a/src/styles/blocks/actualy.scss
+++ b/src/styles/blocks/actualy.scss
@@ -1,3 +1,169 @@
 .actualy {
-  font-size: 16px;
+  &__title {
+    margin-bottom: 40px;
+    font-family: $montserrat;
+    font-size: 36px;
+    line-height: 36px;
+    text-align: center;
+
+    
+    @include onTabletAndDesktop {
+      margin-bottom: 48px;
+      font-size: 48px;
+      line-height: 48px;
+      text-align: left;
+    }
+
+    @include onDesktop {
+      margin-bottom: 56px;
+    }
+  }
+
+  &__event {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    margin-bottom: 104px;
+
+    @include onTablet {
+      gap: 40px;
+    }
+
+    @include onDesktop {
+      flex-direction: row;
+      gap: 130px;
+      align-items: center;
+    }
+  }
+
+  &__event-image {
+    width: 100%;
+    height: auto;
+    // margin-bottom: 16px;
+
+    // @include onTablet {
+    //   margin-bottom: 40px;
+    // }
+
+    @include onDesktop {
+      width: 670px;
+      // margin: 0;
+    }
+
+    @include hover(transform, scale(102%));
+  }
+
+  &__event-name-date {
+    display: flex;
+    // gap: 10px;
+    margin-bottom: 10px;
+
+    @include onTabletAndDesktop {
+      margin-bottom: 30px;
+    }
+
+    &--lecture {
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+  }
+  
+  &__event-name {
+    width: 129px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 16px;
+    color: $title-gray;
+    
+    &--lecture {
+      width: 90px;
+    }
+  }
+  
+  &__event-date {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 16px;
+    color: $green;
+  }
+
+  &__event-title {
+    margin-bottom: 12px;
+    font-family: $montserrat;
+    font-size: 28px;
+    line-height: 28px;
+
+    &::after {
+      display: inline-block;
+      content: "";
+      width: 10px;
+      height: 10px;
+      background-color: $red;
+      transform: translate(10px, -2px);
+
+      @include onTabletAndDesktop {
+        width: 15px;
+        height: 16px;
+      }
+    }
+
+    @include onTabletAndDesktop {
+      margin-bottom: 16px;
+      font-size: 36px;
+      line-height: 36px;
+    }
+    
+    &--lecture {
+      text-align: center;
+
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  &__event-text {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 24px;
+    color: $text-gray;
+
+    @include onTablet {
+      width: 460px;
+    }
+
+    @include onDesktop {
+      width: 370px;
+    }
+  }
+
+  &__lecture-image {
+    width: 100vw;
+    margin-left: calc(-50vw + 50%);
+    
+    @include onTablet {
+      width: 100%;
+      margin-left: 0;
+    }
+    
+    @include onDesktop {
+      margin-left: -55px;
+      width: 1280px;
+    }
+
+    @include hover(transform, scale(102%));
+  }
+
+  &__lecture-description {
+    padding: 20px 0;
+    background-color: $bgc-gray;
+    transform: translateY(-50%);
+    border-bottom: 3px solid $title-gray;
+
+    @include onTabletAndDesktop {
+      margin: 0 auto;
+      padding: 45px 0;
+      width: 570px;
+    }
+  }
 }
