--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,23 +1,21 @@
 .header {
   max-width: 1280px;
-  margin: 0 auto;
+  // margin: 0 auto;
   position: relative;
   display: flex;
-  // justify-content: space-between;
   flex-direction: column;
-  // gap: 10px;
 
   @include onTabletAndDesktop {
     flex-direction: row-reverse;
   }
 
   &__menu {
+    display: block;
     position: absolute;
     top: 33px;
     left: 23px;
-    width: 18px;
-    height: 12px;
-    background-image: url(../images/menu.svg);
+    width: 23px;
+    height: 16px;
     @include hover(transform, scale(120%));
     
     @include onTablet {
@@ -29,6 +27,10 @@
       top: 45px;
       left: 58px;
     }
+  }
+
+  &__menu-icon {
+    width: 100%;
   }
 
   &__logo {
