--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,11 +4,13 @@
   width: 100%;
   height: 100vh;
   color: $white;
-  background-color: rgba(0, 0, 0, 0.4);
-  transition: top 0.3s;
+  background-color: rgba(0, 0, 0, 0);
+  transition: top 0.3s, background-color 0.3s;
 
   &:target {
     top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: top 0.3s, background-color 0.6s;
   }
 
   &__container {
