--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "typography";
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
+@import "./blocks/container.scss";
 @import "./blocks/button.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/actualy.scss";
