fix after review

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -6,9 +6,9 @@
   margin-bottom: 200px;
 
   @include onTablet {
-    background-image: url(../images/namu_bg.jpg);
+    background-image: url(../images/namu_bg-tablet.jpg);
     background-position: right;
-    background-size: contain;
+    background-size: auto;
     height: 384px;
   }
 
@@ -91,7 +91,6 @@
       background-image: url(../images/logo.svg);
       background-position: center;
       background-repeat: no-repeat;
-      background-color: #fff;
       opacity: 0.8;
       transition: all 0.3s;
 
@@ -101,11 +100,6 @@
         margin-right: 180px;
         background-color: #8880;
         opacity: 1;
-      }
-
-      @include forPhoto {
-        background-color: #fff;
-        opacity: 0.8;
       }
 
       @include onDesktop {
