--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,5 +12,6 @@
 @import "blocks/swiper";
 @import "blocks/subscribe";
 @import "blocks/form";
+@import "blocks/overlay";
 
 @import "blocks/footer";
