--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -4,3 +4,13 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: IBM Plex Sans;
+  src: url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap");
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap");
+}
