--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,20 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "blocks/grid.scss";
+@import "blocks/container.scss";
+@import "blocks/header.scss";
+@import "blocks/page.scss";
+@import "blocks/museum.scss";
+@import "blocks/logo.scss";
+@import "blocks/icon.scss";
+@import "blocks/tickets.scss";
+@import "blocks/events.scss";
+@import "blocks/lecture.scss";
+@import "blocks/slider.scss";
+@import "blocks/gallery.scss";
+@import "blocks/subcription.scss";
+@import "blocks/footer.scss";
 
 body {
   background: $c-gray;
