--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -1,6 +1,47 @@
-@mixin hover($_property, $_toValue) {
-  transition: #{$_property} 0.3s;
-  &:hover {
-    #{$_property}: $_toValue;
+@mixin onMobile {
+  @media (max-width: 689px) {
+    @content;
   }
+}
+
+@mixin onTablet {
+  @media (min-width: 690px) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: 1170px) {
+    @content;
+  }
+}
+
+@mixin smallSquare {
+  width: 10px;
+  height: 10px;
+  background-color: $squareColor;
+}
+
+@mixin bigSquare {
+  width: 15px;
+  height: 15px;
+  background-color: $squareColor;
+}
+
+@mixin smallBlock {
+  width: 50px;
+  height: 50px;
+  background-color: $squareColor;
+  background-image: url(../images/Vector.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@mixin bigBlock {
+  width: 70px;
+  height: 70px;
+  background-color: $squareColor;
+  background-image: url(../images/Vector.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
