--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$color-branding: #1a5a4c;
+$color-text-body: #0f0e08;
+$color-subtitle: #687480;
+$color-paragraph: #4e4e4e;
+$color-red:#f14a27;
+
+$transition: all ease-in-out 0.4s;
