--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,9 +3,9 @@
 @import "./blocks/container.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/icon.scss";
-// @import "./blocks/title.scss";
-// @import "./blocks/button.scss";
-// @import "./blocks/navbar.scss";
+@import "./blocks/title.scss";
+@import "./blocks/button.scss";
+@import "./blocks/navbar.scss";
 // @import "./blocks/info.scss";
 
 // @import "./blocks/page.scss";
