--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,9 +6,9 @@
 @import "./blocks/title.scss";
 @import "./blocks/button.scss";
 @import "./blocks/navbar.scss";
-// @import "./blocks/info.scss";
+@import "./blocks/info.scss";
 
-// @import "./blocks/page.scss";
+@import "./blocks/page.scss";
 // @import "./blocks/header.scss";
 // @import "./blocks/menu.scss";
 // @import "./blocks/events.scss";
