--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,7 @@
 @import "./blocks/info.scss";
 
 @import "./blocks/page.scss";
-// @import "./blocks/header.scss";
+@import "./blocks/header.scss";
 // @import "./blocks/menu.scss";
 // @import "./blocks/events.scss";
 // @import "./blocks/event.scss";
