--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,8 +10,8 @@
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
-// @import "./blocks/menu.scss";
-// @import "./blocks/events.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/events.scss";
 // @import "./blocks/event.scss";
 // @import "./blocks/gallery.scss";
 // @import "./blocks/swiper.scss";
