--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,7 @@
 @import "./blocks/header.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/events.scss";
-// @import "./blocks/event.scss";
+@import "./blocks/event.scss";
 // @import "./blocks/gallery.scss";
 // @import "./blocks/swiper.scss";
 // @import "./blocks/subscribe.scss";
