--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -9,7 +9,7 @@
 
   &--lection {
     display: block;
-    background-image: url("../images/backgrounds/bg-lection.jpg");
+    // background-image: url("../images/backgrounds/bg-lection.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
