--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,7 @@
 @import "./blocks/menu.scss";
 @import "./blocks/events.scss";
 @import "./blocks/event.scss";
-// @import "./blocks/gallery.scss";
-// @import "./blocks/swiper.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/swiper.scss";
 // @import "./blocks/subscribe.scss";
 // @import "./blocks/footer.scss";
