--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,5 +15,5 @@
 @import "./blocks/event.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/swiper.scss";
-// @import "./blocks/subscribe.scss";
+@import "./blocks/subscribe.scss";
 // @import "./blocks/footer.scss";
