--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,4 +16,4 @@
 @import "./blocks/gallery.scss";
 @import "./blocks/swiper.scss";
 @import "./blocks/subscribe.scss";
-// @import "./blocks/footer.scss";
+@import "./blocks/footer.scss";
