improve swiper images

--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -11,10 +11,11 @@
     justify-content: center;
     align-items: center;
 
-    width: auto;
+    width: 280px;
     height: 410px;
 
     @include onTablet {
+      width: auto;
       height: 544px;
     }
   }
