--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/vars";
+@import "utils/mixins";
+@import "utils/extends";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/normalize";
+@import "blocks/page";
+@import "blocks/logo";
+@import "blocks/header";
+@import "blocks/icons";
+@import "blocks/button";
