--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,31 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onSmall-desktop {
+  @media (min-width: 1024px) {
+    @content;
+  }
+}
+
+@mixin onTablet {
+  @media (min-width: 640px) {
+    @content;
+  }
+}
+
+@mixin container {
+  margin: 0 auto;
+  max-width: 640px;
+  padding: 0 20px;
+
+  @include onTablet {
+    max-width: 1024px;
+    padding: 0 34px;
+  }
+
+  @include onSmall-desktop {
+    max-width: 1400px;
+    padding: 0 54px;
+  }
+}
