--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -5,6 +5,12 @@
   }
 }
 
+@mixin onDesktop {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
 @mixin onSmall-desktop {
   @media (min-width: 1024px) {
     @content;
